scenarios/roles/coastline-cluster-attack/files/manifests/08-kyverno-container-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: production-container-restriction
  annotations:
    policies.kyverno.io/title: Alllow Ephemeral Containers Only
    policies.kyverno.io/category: Other
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.6.0
    policies.kyverno.io/minversion: 1.6.0
    kyverno.io/kubernetes-version: "1.23"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy prevents regular or init containers from being run in a
      specific namespace. Only ephemeral containers are allowedin Production.
spec:
  validationFailureAction: enforce
  background: true
  rules:
  - name: only-allow-ephemeral-containers
    match:
      any:
      - resources:
          kinds:
            - Pod
          namespaces:
            - default
            - coastline
    validate:
      message: "Deployment of Regular Containers and Init Containers in Coastline is not permitted."
      pattern:
        spec:
          X(containers): "null"
          X(initContainers): "null"
